# dataplatform-python-sdk

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements.txt
dataplatform_sdk/clients/: __init__.py
dataplatform_sdk/config/: __init__.py
dataplatform_sdk/credentials/: __init__.py
dataplatformsdk/client/: credentials.py  dataplatformclient.py
dataplatformsdk/conf/: ClientConfig.py
dataplatformsdk/errors/: exceptions.py
src/: clients.rs  config.rs  credentials.rs  lib.rs
src/dataplatform_api/: time_series.rs
tests/: conftest.py  test_dataplatformclient.py  test_modules.py  test_time_series.py
