[package]
name = "dataplatform"
version = "0.0.1"
edition = "2021"

[lib]
name = "dataplatform"
crate-type = ["cdylib"]  # Compile as a C-compatible dynamic library

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde_json = "1.0"
oauth2 = "5.0.0-rc.1"

[dependencies.pyo3]
version = "0.22.6"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "extension-module"]