[project]
name = "dataplatform_sdk"

version = "0.0.1-dev"
description = "IntelliStream DataHub Data Platform Python SDK"
readme = "README.md"
authors = [
    {name = "Olav Groenaas Gjerde", email = "olav@intellistream.ai"}
]
license = { file = "LICENSE" }

dependencies = [
    "pytest",
    "pytest-mock"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
"Documentation" = "https://dataplatform-sdk-python.intellistream.ai/"
"Source Code" = "https://github.com/IntelliStream-DataHub/dataplatform-python-sdk"
"Issue Tracker" = "https://github.com/IntelliStream-DataHub/dataplatform-python-sdk/issues"

[tool.maturin]
python-source = "python"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.7.4"]
build-backend = "maturin"